# OrderData_API

./: .env.example  .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: b68c3f5c9725_initial.py  e566b5e7b0a3_initial.py
api/: core.py  order.py  reg_auth.py
core/config/: core_config.py  db_config.py  jwt_config.py
core/dependencies/: JWT.py  database.py  database_session.py
internal/db_models/: basket_db.py  history_views_db.py  order_db.py  product_db.py  tag_db.py  user_db.py
internal/models/: basket_pyd.py  core.py  history_orders_pyd.py  history_views_pyd.py  order_pyd.py  product_pyd.py  tag_pyd.py  user_pyd.py
internal/repository/: orders.py  products.py  users.py
pkg/: color_print.py
