[tool.poetry]
name = "orderdata-api"
version = "0.1.0"
description = "poetry-venv for API"
authors = ["zanid <zanid227@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
asyncpg = '^0.30.0'
alembic = '^1.14.0'
uvicorn = "0.33"
pydantic = "^2.10.4"
environs = "^14.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
